--- a/src/Pages/Pages.Principal.fmx
+++ b/src/Pages/Pages.Principal.fmx
@@ -1,7 +1,9 @@
 object PagePrincipal: TPagePrincipal
   Left = 0
   Top = 0
-  Caption = 'In'#237'cio'
+  Caption = 
+    'CIPTEA - Carteirinha de Identifica'#231#227'o para Pessoas com Transtorn' +
+    'o do Espectro Autista'
   ClientHeight = 768
   ClientWidth = 1024
   Position = ScreenCenter
